Fixed: opened folders scrolling out of view on bottom displays line

--- a/contentcuration/contentcuration/static/less/clipboard.less
+++ b/contentcuration/contentcuration/static/less/clipboard.less
@@ -96,6 +96,10 @@
 							}
 						}
 
+						.subdirectory{
+							visibility:collapsed;
+						}
+
 						width:100%;
 						height:@clipboard-list-item-height;
 						
